<resources>
    <string name="app_name">MobWebHF</string>

    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="pieChart">Analitics</string>
    <string name="vault">Vault</string>

    <string name="name">Name</string>
    <string name="price">Price</string>
    <string name="category">Category</string>
    <string name="time">Time</string>
    <string name="type">Type</string>

    <string name="remove">Remove</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>

    <string name="new_item_title">Add Item</string>
    <string name="new_item_name_hint">Name</string>
    <string name="new_item_price_hint">Price</string>
    <string name="new_item_category_hint">Category</string>

    <string name="incomeValue">Income: %1$dFt</string>
    <string name="expenseValue">Expense: %1$dFt</string>
    <string name="savingsValue">Savings: %1$dFt</string>
    <string name="food">Food: %1$dFt</string>
    <string name="hobby">Hobby: %1$dFt</string>
    <string name="clothes">Clothes: %1$dFt</string>
    <string name="entertainment">Entertainment: %1$dFt</string>
    <string name="other">Other: %1$dFt</string>
    <string name="total">Total: %1$dFt</string>

    <string-array name="Categories">
        <item>Food</item>
        <item>Hobby</item>
        <item>Sports</item>
        <item>Clothes</item>
        <item>Entertainment</item>
        <item>Other</item>
    </string-array>

</resources>