<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp">

    <EditText
        android:id="@+id/etNewBudgetItemName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_item_name_hint"
        android:inputType="text" />
    <EditText
        android:id="@+id/etNewBudgetItemPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_item_price_hint"
        android:inputType="numberDecimal" />
    <EditText
        android:id="@+id/etNewBudgetItemCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_item_category_hint"
        android:inputType="textAutoComplete" />

</LinearLayout>